syntax = "proto3";

package NAlice.NData;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario/video";
option java_package = "ru.yandex.alice.protos.data.scenario.video";

import "google/protobuf/struct.proto";
import "alice/protos/data/video/video.proto";
import "alice/protos/data/app_metrika/metrika.proto";
import "mapreduce/yt/interface/protos/extension.proto";

message TGalleryData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    message TCard {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        string LogoUrl = 1 [json_name = "logo_url", (NYT.column_name) = "logo_url", deprecated = true];
        double LogoAlpha = 2 [json_name = "logo_alpha", (NYT.column_name) = "logo_alpha", deprecated = true];
        string LegalLogoUrl = 3 [json_name = "legal_logo_url", (NYT.column_name) = "legal_logo_url", deprecated = true];
        double LegalLogoAlpha = 4 [json_name = "legal_logo_alpha", (NYT.column_name) = "legal_logo_alpha", deprecated = true];
        string MetaText = 5 [json_name = "meta_text", (NYT.column_name) = "meta_text", deprecated = true];
        string SubscriptionText = 6 [json_name = "subscription_text", (NYT.column_name) = "subscription_text"];
        string RatingText = 7 [json_name = "rating_text", (NYT.column_name) = "rating_text", deprecated = true];
        string RatingColor = 8 [json_name = "rating_color", (NYT.column_name) = "rating_color", deprecated = true];
        string DescriptionText = 9 [json_name = "description_text", (NYT.column_name) = "description_text"];
        string TitleText = 10 [json_name = "title_text", (NYT.column_name) = "title_text"];
        string ContentId = 11 [json_name = "content_id", (NYT.column_name) = "content_id"];
        string ContentType = 12 [json_name = "content_type", (NYT.column_name) = "content_type"];

        repeated string Genres = 13 [json_name = "genres", (NYT.column_name) = "genres"];
        string Countries = 14 [json_name = "countries", (NYT.column_name) = "countries"];
        int32 ReleaseYear = 15 [json_name = "release_year", (NYT.column_name) = "release_year"];
        uint64 DurationSeconds = 16 [json_name = "duration_seconds", (NYT.column_name) = "duration_seconds"];
        uint32 AgeLimit = 17 [json_name = "age_limit", (NYT.column_name) = "age_limit"];

        TAvatarMdsImage LogoUrls = 18 [json_name = "logo_urls", (NYT.column_name) = "logo_urls"];
        TAvatarMdsImage LegalLogoUrls = 19 [json_name = "legal_logo_urls", (NYT.column_name) = "legal_logo_urls"];
        float Rating = 20 [json_name = "rating", (NYT.column_name) = "rating"];
        TAvatarMdsImage ThumbnailUrls = 21 [json_name = "thumbnail_urls", (NYT.column_name) = "thumbnail_urls"];
        google.protobuf.Struct OnVhContentCardOpenedEvent = 22 [json_name = "on_vh_content_card_opened_event", (NYT.column_name) = "on_vh_content_card_opened_event"];
        google.protobuf.Struct CarouselItemGeneralAnalyticsInfoPayload = 23 [json_name = "carousel_item_general_analytics_info", (NYT.column_name) = "carousel_item_general_analytics_info"];
        string OntoId = 24 [json_name = "carousel_item_general_analytics_info", (NYT.column_name) = "carousel_item_general_analytics_info"];

        enum LicenseType {
            UNKNOWN = 0;
            FVOD = 1;
            AVOD = 2;
            SVOD = 3;
            TVOD = 4;
            EST = 5;
        }

        bool IsContentAvailable = 25 [json_name = "is_content_available", (NYT.column_name) = "is_content_available"];
        LicenseType RequiredLicenseType = 26 [json_name = "required_license_type", (NYT.column_name) = "required_license_type"];
        repeated string SubscriptionTypes = 27 [json_name = "subscription_types", (NYT.column_name) = "subscription_types"];
    }

    string GalleryId = 1 [json_name = "gallery_id", (NYT.column_name) = "gallery_id"];
    string GalleryTitle = 2 [json_name = "gallery_title", (NYT.column_name) = "gallery_title"];
    string GalleryParentScreen = 3 [json_name = "gallery_parent_screen", (NYT.column_name) = "gallery_parent_screen"];
    int32 GalleryPosition = 4 [json_name = "gallery_title", (NYT.column_name) = "gallery_title"];
    string RequestId = 5 [json_name = "request_id", (NYT.column_name) = "request_id"];
    string ApphostRequestId = 6 [json_name = "apphost_request_id", (NYT.column_name) = "apphost_request_id"];
    repeated TCard Cards = 7 [json_name = "cards", (NYT.column_name) = "cards"];
    google.protobuf.Struct CarouselItemGeneralAnalyticsInfoPayload = 8 [json_name = "carousel_item_general_analytics_info", (NYT.column_name) = "carousel_item_general_analytics_info"];
}
