syntax = "proto3";

package NAlice.NTv;

option go_package = "a.yandex-team.ru/alice/protos/data/tv/home";
option java_package = "ru.yandex.alice.protos.data.tv.home";
option java_outer_classname = "TvHomeRequestProto";

import "alice/protos/data/tv/tags/catalog_tag.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TGetGalleriesRequest {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string CategoryId = 1 [json_name = "category_id", (NYT.column_name) = "category_id"];
    uint32 MaxItemsPerGallery = 2 [json_name = "max_items_per_gallery", (NYT.column_name) = "max_items_per_gallery"];
    uint32 Offset = 3 [json_name = "offset", (NYT.column_name) = "offset"];
    uint32 Limit = 4 [json_name = "limit", (NYT.column_name) = "limit"];
    string CacheHash = 5 [json_name = "cache_hash", (NYT.column_name) = "cache_hash"];
    string FromScreenId = 6 [json_name = "from_screen_id", (NYT.column_name) = "from_screen_id"];
    string ParentFromScreenId = 7 [json_name = "parent_from_screen_id", (NYT.column_name) = "parent_from_screen_id"];
    bool KidModeEnabled = 8 [json_name = "kid_mode_enabled", (NYT.column_name) = "kid_mode_enabled"];
    string RestrictionAge = 9  [json_name = "restriction_age", (NYT.column_name) = "restriction_age"];
}

message TGetGalleryRequest {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    uint32 Offset = 2 [json_name = "offset", (NYT.column_name) = "offset"];
    uint32 Limit = 3 [json_name = "limit", (NYT.column_name) = "limit"];
    string CacheHash = 4 [json_name = "cache_hash", (NYT.column_name) = "cache_hash"];
    string FromScreenId = 5 [json_name = "from_screen_id", (NYT.column_name) = "from_screen_id"];
    string ParentFromScreenId = 6 [json_name = "parent_from_screen_id", (NYT.column_name) = "parent_from_screen_id"];
    uint32 CarouselPosition = 7 [json_name = "carousel_position", (NYT.column_name) = "carousel_position"];
    string CarouselTitle = 8 [json_name = "carousel_title", (NYT.column_name) = "carousel_title"];
    bool KidModeEnabled = 9 [json_name = "kid_mode_enabled", (NYT.column_name) = "kid_mode_enabled"];
    string RestrictionAge = 10  [json_name = "restriction_age", (NYT.column_name) = "restriction_age"];
    repeated TCatalogTag SelectedTags = 11 [json_name = "selected_tags", (NYT.column_name) = "selected_tags"];
}
